--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,8 +1,12 @@
-<p>Página inicial</p>
+<h1>Current events</h1>
+<% @events.each do |event| %>
+  <li> <%= link_to event.name, event_path(event.id) %> </li>
+<% end %>
 
 
 <% if user_signed_in? %>
   <p>Hello <%= current_user.name %>!</p><br>
+  <%= link_to "Create an event", new_user_event_path(current_user[:id])%><br>
   <%= link_to "Sign out", destroy_user_session_path, method: "delete" %>
 <% else %>
   <%= link_to "Sign in", new_user_registration_path %> <br>
