--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,6 @@
 <%= @event.name %><br>
 <p>Hosted by: <%= @event.host.name %></p>
+<p>Date: <%= @event.date %>  </p>
 
 <p>Guests:</p>
 <% @event.attendees.each do |guest|%>
